Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

0.67     2015-11-30
        * Same as 0.66, but repeating changes from 0.63 since there's a bunch
          of them.
        * Added a new method to Test::Class::Moose::Report, timing_data. This
          returns a complex data structure containing timing data for all
          levels of test suite. This is useful if you want to store test run
          timing data for later analysis.
        * Added a new report object, Test::Class::Moose::Report::Class. Each
          class that is tested gets one of these reports. The Class report in
          turn contains 1+ Instance reports, which in turn contains 1+ Method
          reports.
        * The TCM::Report::Instance class now has two new methods,
          test_startup_method and test_shutdown_method. These methods return
          TCM::Report::Method objects with information about these control
          methods.
        * The TCM::Report::Method class now has two new methods,
          test_setup_method and test_teardown_method. These methods return
          TCM::Report::Method objects with information about these control
          methods.
        * Removed the Test::Class::Moose::Report::Instance's error
          attribute. Contrary to the documentation, this attribute was never
          populated.
        * Renamed Test::Class::Moose::Report::Method->instance_report method
          to instance. This is a better match for other report-related
          methods, which don't include a "_report" suffix.
        * Removed the long-deprecated tests_run methods from TCM::Report and
          TCM::Report::Method.
        * Removed the long-deprecated TCM::Report::Method->add_to_plan method.

0.66     2015-11-30 (TRIAL RELEASE)
        * On some systems it seems that Benchmark can report negative run
          times. We now make sure all times are no less than zero in
          Test::Class::Moose::Report::Time.

0.65     2015-11-25 (TRIAL RELEASE)