@@ -46,6 +46,7 @@ stopwords = strawman
 stopwords = subtest
 stopwords = subtests
 stopwords = teardown
+stopwords = toolkits
 stopwords = un
 stopwords = xUnit
 ; annocpan.org was not responding
