@@ -1,6 +1,9 @@
 Revision history for Perl distribution Test-Class-Moose
 
 {{$NEXT}}
+        * If you "use Test::Class::Moose bare => 1" you will no longer get
+          Test::Most exported into your class. Instead, you can load the
+          testing module(s) of your choice.
 
 0.67     2015-11-30
         * Same as 0.66, but repeating changes from 0.63 since there's a bunch
